Fix dropdown style and diagram text alignment

--- a/presto-ui/src/static/assets/presto.css
+++ b/presto-ui/src/static/assets/presto.css
@@ -127,6 +127,7 @@ pre {
 
 .table > tbody > tr > td {
     border: none;
+    background-color: inherit;
 }
 
 .table > tbody > tr:first-child {
